third_party/move/move-compiler-v2/tests/checking/typing/shadowing_invalid_scope.exp

Diagnostics:
error: undeclared `M::x`
  ┌─ tests/checking/typing/shadowing_invalid_scope.move:5:10
  │
5 │         (x: bool);
  │          ^
